tests/invalid/12_retorna_sin_pcoma.patito
programa retornaSinPcoma;

entero malo(x : entero) {
    {
        retorna x
    }
} ;

inicio
{
}
fin
